manifests/nginx/nginx-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ts-ingress
  namespace: nginx-hello-world
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  tls:
    - hosts:
        - nginx
